--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ android {
             dimension "stage"
             signingConfig signingConfigs.release
         }
-        konka {
+        mumuqingtian {
             dimension "stage"
             signingConfig signingConfigs.release
         }
