--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,6 @@ dependencies {
     //butterknife
     implementation 'com.jakewharton:butterknife:10.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+
+//    implementation project(path: ':ndktest')
 }
