--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ DEBUG_STORE_FILE=../jenkinskey/platform.keystore
 android.useAndroidX=true
 android.enableJetifier=true
 #½ûÓÃaapt
-#android.enableAapt2=false
+android.enableAapt2=false
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
