--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.4.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
 
     annotationProcessor 'androidx.annotation:annotation:1.0.0'
 
